Begun Type 1 Cpp BookDatabase Implementation
- replaced old SimpleBookDatabase class with new BookDatabase_Type1 class, in C++
- added support for multiple genres in sorting, changed data structure to accomodate
- added a filtering function, for now only works with genre
- updated main.py UI to allow for adding multiple genres to filter with

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ DatasetManagement/GoodReads_100k_books.csv
 /src/BookDatabase/book_database_cpp.egg-info
 /src/BookDatabase/build
 /src/BookDatabase/lib
+*.pyc
